# pymodeller

./: .gitignore  README.md  pyproject.toml
src/modelbest/: _automl.py  _helpers.py  api.py  domain.py  repository.py
src/pymodeller/: _automl.py  api.py  repository.py
